--- a/test3.qmd
+++ b/test3.qmd
@@ -22,7 +22,7 @@ library(foreach)
 library(doParallel)
 
 # Change this to lower if computer is unhappy
-registerDoParallel(cores = detectCores() / 2)
+registerDoParallel(cores = detectCores() - 2)
 
 data <- penguins
 # data <- penguins |> 
@@ -38,7 +38,7 @@ data <- data |>
 ```{r}
 resample_function <- function(data = data,
                               k = 3,
-                              number_of_resamples = 10,
+                              number_of_resamples = 50,
                               proportion_resample = 0.8) {
   start <- Sys.time()
   data <- data |> 
@@ -97,12 +97,13 @@ resample_function <- function(data = data,
 
 ```{r}
 final_sum_matrix <- data.frame()
+final_mean_matrix <- data.frame()
 ```
 
 
 # k = 2
 ```{r}
-res_2 <- resample_function(data = data, number_of_resamples = 10, k = 2)
+res_2 <- resample_function(data = data, k = 2)
 final_2 <- res_2 |> 
   reduce(`+`)
 final <- final_2 |> 
@@ -133,7 +134,15 @@ c <- res_2 |>
 d <- c / b
 
 
-image(d)
+plot <- data.frame(d) |> 
+  rownames_to_column("Index") |> 
+  pivot_longer(-Index) |> 
+  mutate(Index = factor(Index, levels = 1:nrow(d)),
+         name = factor(name, levels = paste0("X", 1:nrow(d)))) |> 
+  ggplot(aes(x = Index, y = name)) +
+  geom_tile(aes(fill = value)) +
+  ggtitle("Mean without 0s")
+ggplotly(plot)
 
 d <- as.vector(d)
 d <- d[!is.na(d)]
@@ -142,7 +151,13 @@ mean(d)
 
 sd(d)
 
+final_mean_matrix <- rbind(final_mean_matrix, data.frame(d) |> drop_na() |>
+  mutate(k = 2))
 
+
+e <- d[!(d %in% c(1, -1))]
+mean(e)
+sd(e)
 ```
 46.38 seconds on 10 resamples on penguins data with no NA with 80% resample prop
 ```{r}
@@ -161,7 +176,7 @@ data |>
 
 # k = 3
 ```{r}
-res_3 <- resample_function(data = data, number_of_resamples = 10, k = 3)
+res_3 <- resample_function(data = data, k = 3)
 final_3 <- res_3 |> 
   reduce(`+`)
 
@@ -180,8 +195,8 @@ image(final_3)
 plot <- data.frame(final_3) |> 
   rownames_to_column("Index") |> 
   pivot_longer(-Index) |> 
-  mutate(Index = factor(Index, levels = 1:nrow(final_2)),
-         name = factor(name, levels = paste0("X", 1:nrow(final_2)))) |> 
+  mutate(Index = factor(Index, levels = 1:nrow(final_3)),
+         name = factor(name, levels = paste0("X", 1:nrow(final_3)))) |> 
   ggplot(aes(x = Index, y = name)) +
   geom_tile(aes(fill = value))
   
@@ -200,21 +215,36 @@ c <- res_3 |>
 d <- c / b
 
 
-image(d)
+plot <- data.frame(d) |> 
+  rownames_to_column("Index") |> 
+  pivot_longer(-Index) |> 
+  mutate(Index = factor(Index, levels = 1:nrow(d)),
+         name = factor(name, levels = paste0("X", 1:nrow(d)))) |> 
+  ggplot(aes(x = Index, y = name)) +
+  geom_tile(aes(fill = value)) +
+  ggtitle("Mean without 0s")
+ggplotly(plot)
+
 
 d <- as.vector(d)
 d <- d[!is.na(d)]
 
 mean(d)
-
 sd(d)
+
+final_mean_matrix <- rbind(final_mean_matrix, data.frame(d) |> drop_na() |>
+  mutate(k = 3))
+
+e <- d[!(d %in% c(1, -1))]
+mean(e)
+sd(e)
 
 ```
 
 # k = 4
 ```{r}
 res_4 <- resample_function(data = data,
-                           number_of_resamples = 10, k = 4)
+                           k = 4)
 final_4 <- res_4 |> 
   reduce(`+`)
 
@@ -233,7 +263,15 @@ c <- res_4 |>
 d <- c / b
 
 
-image(d)
+plot <- data.frame(d) |> 
+  rownames_to_column("Index") |> 
+  pivot_longer(-Index) |> 
+  mutate(Index = factor(Index, levels = 1:nrow(d)),
+         name = factor(name, levels = paste0("X", 1:nrow(d)))) |> 
+  ggplot(aes(x = Index, y = name)) +
+  geom_tile(aes(fill = value)) +
+  ggtitle("Mean without 0s")
+ggplotly(plot)
 
 d <- as.vector(d)
 d <- d[!is.na(d)]
@@ -242,6 +280,10 @@ mean(d)
 
 sd(d)
 
+final_mean_matrix <- rbind(final_mean_matrix, data.frame(d) |> drop_na() |>
+  mutate(k = 4))
+
+
 # omg, flashback to zero-inflated poisson?????
 
 
@@ -249,7 +291,7 @@ final_sum_matrix <- rbind(final_sum_matrix, data.frame(final) |> drop_na() |>
   mutate(k = 4))
 
 res_5 <- resample_function(data = data,
-                           number_of_resamples = 10, k = 5)
+                           k = 5)
 final_5 <- res_5 |> 
   reduce(`+`)
 
@@ -271,7 +313,15 @@ c <- res_5 |>
 d <- c / b
 
 
-image(d)
+plot <- data.frame(d) |> 
+  rownames_to_column("Index") |> 
+  pivot_longer(-Index) |> 
+  mutate(Index = factor(Index, levels = 1:nrow(d)),
+         name = factor(name, levels = paste0("X", 1:nrow(d)))) |> 
+  ggplot(aes(x = Index, y = name)) +
+  geom_tile(aes(fill = value)) +
+  ggtitle("Mean without 0s")
+ggplotly(plot)
 
 d <- as.vector(d)
 d <- d[!is.na(d)]
@@ -279,12 +329,26 @@ d <- d[!is.na(d)]
 mean(d)
 
 sd(d)
+final_mean_matrix <- rbind(final_mean_matrix, data.frame(d) |> drop_na() |>
+  mutate(k = 5))
+
+
+e <- d[!(d %in% c(1, -1))]
+mean(e)
+sd(e)
 ```
 
 ```{r}
 unique(final_sum_matrix$k)
 final_sum_matrix |> 
   ggplot(aes(x = final)) +
+  geom_histogram() +
+  facet_wrap(~k)
+```
+```{r}
+unique(final_sum_matrix$k)
+final_mean_matrix |> 
+  ggplot(aes(x = d)) +
   geom_histogram() +
   facet_wrap(~k)
 ```
@@ -317,7 +381,7 @@ new_d <- penguins
 new_d$index <- 1:nrow(new_d)
 
 random_sample <- new_d |>
-    filter(index %in% sample(index, 0.5 * nrow(new_d)))
+    filter(index %in% sample(index, 0.9 * nrow(new_d)))
 
 
 random_sample <- random_sample |>
@@ -359,6 +423,13 @@ mean(d)
 sd(d)
 ```
 
+```{r}
+final_mean_matrix |> 
+  group_by(k) |> 
+  mutate(value = d) |> 
+  mutate(value = abs(value)) |> 
+  summarize(total = sum((1 - value)^2))
+```
 
 
 ## Experiments
