--- a/week5.qmd
+++ b/week5.qmd
@@ -90,6 +90,7 @@ null_multiple_random_unif_init <- function(starting_seed = 599,
                                           max_k = 5) {
   lapply(c(1:n), function(i) {
     temp_seed <- starting_seed * i
+    set.seed(temp_seed)
     data <- data.frame(cbind(runif(100), runif(100)))
     store_res <- lapply(c(2:max_k), function(x) one_k_mean_matrix(data = data,
                                                                   starting_seed = temp_seed,
@@ -106,6 +107,7 @@ null_multiple_random_normal_init <- function(starting_seed = 599,
                                           max_k = 5) {
   lapply(c(1:n), function(i) {
     temp_seed <- starting_seed * i
+    set.seed(temp_seed)
     data <- data.frame(cbind(rnorm(100), rnorm(100)))
     store_res <- lapply(c(2:max_k), function(x) one_k_mean_matrix(data = data,
                                                                   starting_seed = temp_seed,
@@ -138,41 +140,38 @@ random_unif <- data.frame(cbind(runif(100), runif(100)))
 
 15 Clusters, 50 times, with 20 resamples on a random Normal 
 ```{r}
-set.seed(599)
-final_result_2 <- null_multiple(data = random_normal,
-                max_k = 16,
-                n = 30,
-                number_of_resamples = 20)
-write.csv(final_result_2, file = "normal_16k_30n_20r.csv")
+# set.seed(599)
+# final_result_2 <- null_multiple(data = random_normal,
+#                 max_k = 16,
+#                 n = 30,
+#                 number_of_resamples = 20)
+# write.csv(final_result_2, file = "normal_16k_30n_20r.csv")
 ```
 
 ```{r}
-wrapper_func(data = random_normal)
-```
-```{r}
-final_result |> 
-  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = One)) +
-  geom_boxplot() +
-  ggtitle("15 Clusters, 30 n, with 20 resamples on a random UNIFORM") +
-  theme_minimal()
-
-final_result_2 |> 
-  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = One)) +
-  geom_boxplot() +
-  ggtitle("15 Clusters, 30 n, with 20 resamples on a random NORMAL") +
-  theme_minimal()
-
-final_result |> 
-  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = Neg_One)) +
-  geom_boxplot() +
-  ggtitle("15 Clusters, 30 n, with 20 resamples on a random UNIFORM") +
-  theme_minimal()
-
-final_result_2 |> 
-  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = Neg_One)) +
-  geom_boxplot() +
-  ggtitle("15 Clusters, 30 n, with 20 resamples on a random NORMAL") +
-  theme_minimal()
+# final_result |> 
+#   ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = One)) +
+#   geom_boxplot() +
+#   ggtitle("15 Clusters, 30 n, with 20 resamples on a random UNIFORM") +
+#   theme_minimal()
+# 
+# final_result_2 |> 
+#   ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = One)) +
+#   geom_boxplot() +
+#   ggtitle("15 Clusters, 30 n, with 20 resamples on a random NORMAL") +
+#   theme_minimal()
+# 
+# final_result |> 
+#   ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = Neg_One)) +
+#   geom_boxplot() +
+#   ggtitle("15 Clusters, 30 n, with 20 resamples on a random UNIFORM") +
+#   theme_minimal()
+# 
+# final_result_2 |> 
+#   ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = Neg_One)) +
+#   geom_boxplot() +
+#   ggtitle("15 Clusters, 30 n, with 20 resamples on a random NORMAL") +
+#   theme_minimal()
 ```
 
 ## Randomize the uniform distribution after each rerun... why? Because we don't want results to be dependent on initial start. 
@@ -194,6 +193,67 @@ write.csv(final_result_2_init, file = "normal_16k_30n_20r_random_init.csv")
 ```
 
 
+## Read in Saved data
+```{r}
+## Randomly select a uniform/normal, and then use that same dataset with random starting conditions.
+final_result <- read_csv("uniform_16k_30n_20r.csv")
+final_result_2 <- read_csv("normal_16k_30n_20r.csv")
+
+final_result |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random UNIFORM") +
+  theme_minimal()
+
+final_result_2 |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random NORMAL") +
+  theme_minimal()
+
+final_result |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = Neg_One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random UNIFORM") +
+  theme_minimal()
+
+final_result_2 |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = Neg_One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random NORMAL") +
+  theme_minimal()
+```
+
+## Randomize initial starting conditions with each iteration
+```{r}
+final_result_init <- read_csv("unif_16k_30n_20r_random_init.csv")
+final_result_2_init <- read_csv("normal_16k_30n_20r_random_init.csv")
+
+final_result |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random UNIFORM
+          (New Generated Simul. Data per n)") +
+  theme_minimal()
+
+final_result_2 |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random NORMAL") +
+  theme_minimal()
+
+final_result |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = Neg_One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random UNIFORM") +
+  theme_minimal()
+
+final_result_2 |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = 2:16, ordered = TRUE), y = Neg_One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random NORMAL") +
+  theme_minimal()
+```
 
 
 
