--- a/week5.qmd
+++ b/week5.qmd
@@ -22,6 +22,7 @@ set.seed(599)
 source("functions.R")
 ```
 
+
 ```{r}
 image_helper <- function(list_res = list_res) {
   lapply(list_res, function(x) image(x))
@@ -279,5 +280,130 @@ final_result_2_init |>
 # Note... due to the way that uniform is constrained between 0 and 1, I think it
 # could cause weird behavior at cluster = 4 due to the 4 corners of the distributed data...
 
+```
+
+```{r}
+resample_function <- function(data = data,
+                              k = 3,
+                              number_of_resamples = 15,
+                              proportion_resample = 0.9,
+                              starting_seed = 599) {
+  tictoc::tic()
+  data <- data |>
+    drop_na()
+  # data <- data[sample(nrow(data)), ]
+  data$index <- 1:nrow(data)
+  results <- list()
+
+  # For loop
+  results <- foreach(i = 1:number_of_resamples,
+                     .packages = c("tidyclust", "dplyr", "tidymodels")) %dopar% {
+                       # Reproducibility over parallel
+                       set.seed(starting_seed + i)
+                       result_matrix <- matrix(0, nrow = nrow(data), ncol = nrow(data))
+                       # 80% resample
+                       random_sample <- data |>
+                         filter(index %in% sample(index, proportion_resample * nrow(data)))
+
+                       # Run k-means on resample
+                       # kmeans <- k_means(num_clusters = k) |>
+                       #   fit(~ bill_length_mm + flipper_length_mm,
+                       #       data = random_sample)
+
+                       kmeans <- k_means(num_clusters = k) |>
+                         fit(~ X1 + X2 + X3,
+                             data = random_sample)
+
+                       intermediate <- data.frame(random_sample$index,
+                                                  extract_cluster_assignment(kmeans) |>
+                                                    mutate(.cluster = as.character(.cluster)),
+                                                  stringsAsFactors = FALSE)
+                       colnames(intermediate) <- c("index", "cluster")
+
+                       # I don't know how to vectorize this :(
+                       for (n in 1:(nrow(intermediate) - 1)) {
+                         for (m in (n + 1):nrow(intermediate)) {
+                           # if the points are the same then set to NA
+                           if (intermediate[n, ]$index != intermediate[m, ]$index) {
+                             # get first pointer cluster
+                             first <- intermediate[n, ]$cluster
+                             # get second pointer cluster
+                             second <- intermediate[m, ]$cluster
+
+                             # if clusters are the same
+                             if (first == second) {
+                               result_matrix[intermediate[n, ]$index, intermediate[m, ]$index] <- 1
+                             } else {
+                               # if clusters are different
+                               result_matrix[intermediate[n, ]$index, intermediate[m, ]$index] <- -1
+                             }
+                           }
+                         }
+                       }
+                       result_matrix[lower.tri(result_matrix, diag = TRUE)] <- NA
+                       result_matrix
+                     }
+  tictoc::toc()
+  return(results)
+}
+```
+
+
+```{r}
+set.seed(599)
+null_multiple_random_unif_init_2 <- function(starting_seed = 599,
+                                              number_of_resamples = 15,
+                                              n = 5,
+                                              max_k = 5) {
+  lapply(c(1:n), function(i) {
+    temp_seed <- starting_seed * i
+    set.seed(temp_seed)
+    data <- data.frame(cbind(runif(100), runif(100), runif(100)))
+    store_res <- lapply(c(2:max_k), function(x) one_k_mean_matrix(data = data,
+                                                                  starting_seed = temp_seed,
+                                                                  k = x,
+                                                                  number_of_resamples = number_of_resamples))
+    H_function(store_res)
+  }) |> 
+    reduce(`rbind`)
+}
+final_result_init <- null_multiple_random_unif_init_2(max_k = 16,
+                                                      n = 30,
+                                                      number_of_resamples = 20)
+write.csv(final_result_init, file = "data/unif_16k_30n_20r_random_init_3d.csv")
+
+
+```
+
+```{r}
+final_result_init <- read_csv("data/unif_16k_30n_20r_random_init_3d.csv")
+final_result_init |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = c(1, 2, 4, 7, 8, 9), ordered = TRUE), y = One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random 3d UNIFORM 
+          (Generates New Simulated Data per n)") +
+  scale_y_continuous(limits = c(0, 2000)) +
+  theme_minimal()
+
+final_result_init |> 
+  ggplot(aes(x = factor(Cluster_Num, levels = c(1, 2, 4, 7, 8, 9), ordered = TRUE), y = Neg_One)) +
+  geom_boxplot() +
+  ggtitle("15 Clusters, 30 n, with 20 resamples on a random 3d UNIFORM
+          (Generates New Simulated Data per n)") +
+  scale_y_continuous(limits = c(0, 5000)) +
+  theme_minimal()
+
+data <- data.frame(cbind(runif(100), runif(100), runif(100)))
+```
+
+```{r}
+library(plotly)
+data <- data.frame(cbind(runif(100), runif(100), runif(100)))
+
+kmeans <- k_means(num_clusters = 4) |>
+ fit(~ X1 + X2,
+     data = random_sample)
+data |> 
+  plot_ly(x = ~X1, y = ~X2, z = ~X3, color = )
 ```
 
